--- a/_pages/Publications.html
+++ b/_pages/Publications.html
@@ -256,7 +256,7 @@ author_profile: true
     </div>
     
     <div class="pub-venue">
-      WWW 2026 Under Review
+      Ijcai 2026 Under Review
     </div>
     
     <p style="font-size: 0.9em; margin-bottom: 10px;">
